--- a/src/components/WeatherDashboard.css
+++ b/src/components/WeatherDashboard.css
@@ -1,7 +1,7 @@
 /* src/components/WeatherDashboard.css */
 .weather-dashboard {
     text-align: center;
-    padding: 20px;
+    padding-left: 20px;
   }
   
   h1 {
